--- a/kidswatch.html
+++ b/kidswatch.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="New watches, timely treasures, watches" />
+    <meta name="keywords" content="new watches, timely treasures , nepali watch store , all types of watches" />
     <title>Kids-Section</title>
     
     <link rel="stylesheet" href="practice.css">
@@ -63,11 +65,12 @@
                 <div class="productImage">
                     <img src="./assets/images/watch32.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P> Disney Mickey Mouse Kids' Bezel Stainless Steel Time Teacher Analog Nylon Strap Watch .</p>
                     </div>
-                <div class="price">
-                   <h2>RS.1,242</h2>
+                <div class="price"style=margin-bottom:35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.1,500</s>
+                    <h2>RS.1,242</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -82,11 +85,12 @@
                 <div class="productImage">
                     <img src="./assets/images/watch33.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>A ALPS Pink cat Watch Plus White cat Strap </p>
                     </div>
-                <div class="price">
-                   <h2>RS.1,654.62</h2>
+                <div class="price" style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.2,000</s>
+                    <h2>RS.1,654.62</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -141,11 +145,12 @@
                 <div class="productImage">
                     <img src="./assets/images/watch36.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>STAR WARS Kids' Plastic Time Teacher Analog Quartz Silicone Strap Watch </p>
                     </div>
-                <div class="price">
-                   <h2>RS.1,867.14</h2>
+                <div class="price" style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.1,899</s>
+                    <h2>RS.1,867.14</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -198,11 +203,12 @@
                 <div class="productImage">
                     <img src="./assets/images/watch39.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <p>Accutime Barbie Printed Strap LED Kids Watch</p>
                       </div>
-                <div class="price">
-                   <h2>RS.2,577</h2>
+                <div class="price" style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.2,999</s>
+                    <h2>RS.2,577</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -238,11 +244,12 @@
                     <div class="productImage">
                         <img src="./assets/images/watch41.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc" style="height: 9%;">
                         <P>Cute Corgi Pet Fashion Casual Watches for Women Cute Girls Watch Gift Nurses Teachers s </p>
                         </div>
-                    <div class="price">
-                       <h2>RS.3,312</h2>
+                    <div class="price" style="margin-bottom: 35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.3,666 </s>
+                        <h2>RS.3,312</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -295,11 +302,12 @@
                     <div class="productImage">
                         <img src="./assets/images/watch44.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc" style="height: 9%;">
                         <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Gift & Party Favor for Toddlers, Boys. </p>
                         </div>
-                    <div class="price">
-                       <h2>RS.1,656</h2>
+                    <div class="price" style="margin-bottom: 35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.1,785</s>
+                        <h2>RS.1,656</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
