--- a/menwatch.html
+++ b/menwatch.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="New watches, timely treasures, watches" />
+    <meta name="keywords" content="new watches, timely treasures , nepali watch store , all types of watches" />
     <title>Mens-Section</title>
     <link rel="stylesheet" href="practice.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -60,10 +62,11 @@
                 <div class="productImage">
                     <img src="./assets/images/watch2.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc"style="height: 9%;">
                     <P>Timex Men's Easy Reader Watch  </p>
                 </div>
-                <div class="price">
+                <div class="price"style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.4,999</s>
                    <h2>RS.4,363.56</h2>
                 </div>
                 <div class="productBtn">
@@ -117,10 +120,11 @@
                 <div class="productImage">
                     <img src="./assets/images/watch5.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>Timex Men's Expedition Scout 40mm Watch</p>
                 </div>
-                <div class="price">
+                <div class="price"style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
                    <h2>RS.8,004</h2>
                 </div>
                 <div class="productBtn">
@@ -138,11 +142,12 @@
                 <div class="productImage">
                     <img src="./assets/images/watch6.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc"style=height:9%;">
                     <P>Blue Submariner, Alluminium Bezel, Year 2008, with full set (Box, Papers and Warranty Card).</h3></p>
                 </div>
-                <div class="price">
-                   <h2>RS.12,10,011</h2>
+                <div class="price"style="margin-bottom:35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
+                    <h2>RS.12,10,011</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -176,10 +181,11 @@
                 <div class="productImage">
                     <img src="./assets/images/watch8.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>Timex Expedition Rugged Core Analog Watch, Full Size</p>
                 </div>
-                <div class="price">
+                <div class="price"style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.6,280</s>
                    <h2>RS.5,592</h2>
                 </div>
                 <div class="productBtn">
@@ -235,11 +241,12 @@
                     <div class="productImage">
                         <img src="./assets/images/watch11.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc" style="height: 9%;">
                         <P>Apple Watch Series 8 [GPS 45mm] Smart Watch w/Midnight Aluminum Case with Midnight Sport Band </p>
                         </div>
-                    <div class="price">
-                       <h2>RS.18,213</h2>
+                    <div class="price"style="margin-bottom:35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
+                        <h2>RS.18,213</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -273,10 +280,11 @@
                     <div class="productImage">
                         <img src="./assets/images/watch13.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc"style="height: 9%;">
                         <P>Casio - Mens Blk Digital G-Shock Watch (DW9052-1BCG) </p>
                         </div>
-                    <div class="price">
+                    <div class="price"style="margin-bottom:35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.5,225</s>
                        <h2>RS.4,999</h2>
                     </div>
                     <div class="productBtn">
