--- a/practice.html
+++ b/practice.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="New watches, timely treasures, watches" />
+    <meta name="keywords" content="new watches, timely treasures , nepali watch store , all types of watches" />
     <title>Women-Section</title>
     <link rel="stylesheet" href="practice.css"><!--Linking css fo styles-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -42,10 +44,11 @@
                 <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch16.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>Nine West Women's Strap Watch </p><!--Name and description of the product-->
                     </div>
-                <div class="price">
+                <div class="price" style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.3,218</s>
                    <h2>RS.2,898</h2><!--Price of the product-->
                 </div>
                 <div class="productBtn"><!--buttons to add to cart or to buy products-->
@@ -81,10 +84,12 @@
                 <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch18.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc"style="height: 9%;">
                     <P>Bulova Classic Quartz Ladies Watch, Stainless Steel Diamond  </p><!--Name and description of the product-->
                 </div>
-                <div class="price">
+                <div class="price"style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.26,738</s>
+
                    <h2>RS.26,127.54</h2><!--Price of the product-->
                 </div>
                 <div class="productBtn"><!--buttons to add to cart or to buy products-->
@@ -160,11 +165,12 @@
                 <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch22.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc"style="height: 9%;">
                     <P>Citizen Ladies' Eco-Drive Classic Crystal Watch in Two-Tone Stainless Steel, Silver-Tone Dial </p>
                         <!--Name and description of the product-->
                     </div>
-                <div class="price">
+                <div class="price"style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.18,999</s>
                    <h2>RS.18,424</h2><!--Price of the product-->
                 </div>
                 <div class="productBtn"><!--buttons to add to cart or to buy products-->
@@ -220,11 +226,12 @@
                 <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch25.png" alt="">
                 </div>
-                <div class="desc">
+                <div class="desc" style="height: 9%;">
                     <P>Nine West Women's Strap Watch </p><!--Name and description of the product-->
                     </div>
-                <div class="price">
-                   <h2>RS.2,208</h2><!--Price of the product-->
+                <div class="price" style="margin-bottom: 35px;">
+                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.2,300</s>
+                    <h2>RS.2,208</h2><!--Price of the product-->
                 </div>
                 <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
@@ -241,11 +248,13 @@
                     <div class="productImage"><!--Image of product-->
                         <img src="./assets/images/watch26.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc"style="height: 9%;">
                         <P>GUESS Women's Stainless Steel + Stain Resistant Silicone Watch  </p>
                             <!--Name and description of the product-->
                         </div>
-                    <div class="price">
+                    <div class="price"style="margin-bottom: 35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.10,000</s>
+
                        <h2>RS.9,902.88</h2><!--Price of the product-->
                     </div>
                     <div class="productBtn"><!--buttons to add to cart or to buy products-->
@@ -321,11 +330,12 @@
                     <div class="productImage"><!--Image of product-->
                         <img src="./assets/images/watch30.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc" style="height: 9%;">
                         <P>GUESS Petite Silver-Tone Crystal Bracelet Watch</p>
                             <!--Name and description of the product-->
                         </div>
-                    <div class="price">
+                    <div class="price"style="margin-bottom: 35px;" >
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.17,218</s>
                        <h2>RS.16,560</h2><!--Price of the product-->
                     </div>
                     <div class="productBtn"><!--buttons to add to cart or to buy products-->
