This is main version

--- a/kidswatch.html
+++ b/kidswatch.html
@@ -166,7 +166,7 @@
                     <img src="./assets/images/watch37.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Kids Wrist Watch Childrens Cartoon Watch Big Case Pencil Pointer Faux Leather Strap for Kids White childrens cartoon watch  </p>
+                    <P>Kids Wrist Watch Childrens Cartoon Watch Pencil Pointer Faux Leather Strap for Kids White childrens cartoon watch.</p>
                     </div>
                 <div class="price">
                    <h2>RS.2,213</h2>
@@ -224,7 +224,7 @@
                     <img src="./assets/images/watch40.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Digital Sports Waterproof Watch for Boys Girls, Outdoor Multifunction Chronograph with Colorful LED Backlight Analog Watches for Children  </p>
+                    <P>Digital Sports Waterproof Watch for kids, Outdoor Multifunction Chronograph with Colorful LED Backlight Analog Watches.</p>
                     </div>
                 <div class="price">
                    <h2>RS.2,622</h2>
@@ -265,7 +265,7 @@
                         <img src="./assets/images/watch42.png" alt="">
                     </div>
                     <div class="desc">
-                        <P>Accutime Microsoft Minecraft Green Touchscreen Smart Watch Toy for Toddlers - Selfie Cam, Learning Games, Alarm, Calculator, Step Tracker</p>
+                        <P>Accutime Microsoft Minecraft Green Touchscreen Smart Watch Toy for Toddlers - Selfie Cam, Alarm, Calculator, Step Tracker</p>
                         </div>
                     <div class="price">
                        <h2>RS.4,215</h2>
@@ -284,7 +284,7 @@
                         <img src="./assets/images/watch43.png" alt="">
                     </div>
                     <div class="desc">
-                        <P>Casio W-218HC Dull Color, Smoky Color, Nuance Color, Thin, Lightweight, Waterproof, Square, Digital, Square, Kids, Casio </p>
+                        <P>Casio W-218HC Dull Color, Nuance Color, Thin, Lightweight, Waterproof, Square, Digital, Square, Kids, Casio </p>
                         </div>
                     <div class="price">
                        <h2>RS.2,000</h2>
@@ -303,7 +303,7 @@
                         <img src="./assets/images/watch44.png" alt="">
                     </div>
                     <div class="desc" style="height: 9%;">
-                        <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Gift & Party Favor for Toddlers, Boys. </p>
+                        <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Boys. </p>
                         </div>
                     <div class="price" style="margin-bottom: 35px;">
                         <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.1,785</s>
