--- a/menwatch.html
+++ b/menwatch.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="New watches, timely treasures, watches" />
+    <meta name="description" content="New watches, timely treasures, watches" /><!--metadata-->
     <meta name="keywords" content="new watches, timely treasures , nepali watch store , all types of watches" />
     <title>Mens-Section</title>
-    <link rel="stylesheet" href="practice.css">
+    <link rel="stylesheet" href="practice.css"><!--linking css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />   <!--Linking CDN of FontAwesome for different icons-->
 </head>
 <body>
-    <div class="container">
+    <div class="container"><!--container that containes everthing-->
     <div class="content">
-        <header>
-        <div class="navBar">
+        <header><!--starting of header-->
+        <div class="navBar"><!--navigation bar-->
             <div class="pages">
                 <ul type="none">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Research</a></li>
-                    <li class="dropnav"><a href="">Categories</a>
+                    <li><a href="#">Home</a></li><!--links home page-->
+                    <li><a href="#">About us</a></li><!--links about us page-->
+                    <li><a href="#">Blog</a></li><!--links blog page-->
+                    <li><a href="#">Research</a></li><!--links research page-->
+                    <li class="dropnav"><a href="">Categories</a><!--categories of  watch-->
                         <ul class="dropdown">
-                            <li><a href="menwatch.html" target="_main">Men</a></li> 
-                            <li><a href="practice.html" target="_main">Women</a></li>
-                            <li><a href="kidswatch.html" target="_main">Kids</a></li>
+                            <li><a href="menwatch.html" target="_main">Men</a></li><!--links men watch section-->
+                            <li><a href="practice.html" target="_main">Women</a></li><!--links women watch section-->
+                            <li><a href="kidswatch.html" target="_main">Kids</a></li><!--links kids watch section-->
                         </ul> 
                 </ul>
             </div>
-            <div class="searchBox">
+            <div class="searchBox"><!--search box to search iteams-->
                 <input type="search" class="search" placeholder="Search for an item" onblur="search()" >
                 <button class="searchButton" onclick="search()">Search</button>
             </div>
-        </div>
-        </header>
+        </div><!--code for navigation bar ends-->
+        </header><!--ending of header-->
         <div class="mainWrapper">
         <main>
         <div class="topRow">
@@ -142,11 +142,10 @@
                 <div class="productImage">
                     <img src="./assets/images/watch6.png" alt="">
                 </div>
-                <div class="desc"style=height:9%;">
+                <div class="desc">
                     <P>Blue Submariner, Alluminium Bezel, Year 2008, with full set (Box, Papers and Warranty Card).</h3></p>
                 </div>
-                <div class="price"style="margin-bottom:35px;">
-                    <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
+                <div class="price">
                     <h2>RS.12,10,011</h2>
                 </div>
                 <div class="productBtn">
@@ -241,11 +240,10 @@
                     <div class="productImage">
                         <img src="./assets/images/watch11.png" alt="">
                     </div>
-                    <div class="desc" style="height: 9%;">
+                    <div class="desc">
                         <P>Apple Watch Series 8 [GPS 45mm] Smart Watch w/Midnight Aluminum Case with Midnight Sport Band </p>
                         </div>
-                    <div class="price"style="margin-bottom:35px;">
-                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
+                    <div class="price">
                         <h2>RS.18,213</h2>
                     </div>
                     <div class="productBtn">
@@ -261,11 +259,12 @@
                     <div class="productImage">
                         <img src="./assets/images/watch12.png" alt="">
                     </div>
-                    <div class="desc">
+                    <div class="desc" style="height: 9%;">
                         <P>Invicta Pro Diver 30026 Men's Quartz Watch - 43 mm  </p>
                         </div>
-                    <div class="price">
-                       <h2>RS.8,004</h2>
+                    <div class="price" style="margin-bottom: 35px;">
+                        <s style="margin-top: 0px; font-size: small; margin-left: 15px;">RS.8,554</s>
+                        <h2>RS.8,004</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
