this is Final Version

--- a/practice.html
+++ b/practice.html
@@ -22,7 +22,8 @@
     <!--Linking CDN of FontAwesome for different icons-->
   </head>
   <body>
-    <div class="addToCartPopup">
+    <!-- Popup card -->
+    <div class="buyNowPopup">
       <div class="popupCard">
         <div class="popupMessage">Comming soon!!!!</div>
         <div class="popupActions">
@@ -92,12 +93,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.3,218</s
-                  >
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.3,218</s>
+                  <!-- original price of the product -->
                   <h2>RS.2,898</h2>
-                  <!--Price of the product-->
+                  <!-- discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -149,13 +148,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.26,738</s
-                  >
-
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.26,738</s>
+                  <!-- original price of the product -->
                   <h2>RS.26,127.54</h2>
-                  <!--Price of the product-->
+                  <!-- discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -262,12 +258,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.18,999</s
-                  >
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.18,999</s>
+                  <!-- original price of the product  -->
                   <h2>RS.18,424</h2>
-                  <!--Price of the product-->
+                  <!-- discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -344,12 +338,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.2,300</s
-                  >
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.2,300</s>
+                  <!-- original price of the product  -->
                   <h2>RS.2,208</h2>
-                  <!--Price of the product-->
+                  <!-- discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -378,13 +370,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.10,000</s
-                  >
-
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.10,000</s>
+                  <!-- original price of the product -->
                   <h2>RS.9,902.88</h2>
-                  <!--Price of the product-->
+                  <!--discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -488,12 +477,10 @@
                   <!--Name and description of the product-->
                 </div>
                 <div class="price" style="margin-bottom: 35px">
-                  <s
-                    style="margin-top: 0px; font-size: small; margin-left: 15px"
-                    >RS.17,218</s
-                  >
+                  <s style="margin-top: 0px; font-size: small; margin-left: 15px">RS.17,218</s>
+                  <!-- original price of the product -->
                   <h2>RS.16,560</h2>
-                  <!--Price of the product-->
+                  <!--discounted Price of the product-->
                 </div>
                 <div class="productBtn">
                   <!--buttons to add to cart or to buy products-->
@@ -511,16 +498,16 @@
         <!--From here we can change pages-->
         <div style="display: flex; justify-content: center">
           <div class="pagination">
-            <a href="menwatch.html"><</a
-            ><!--links Men-section of watch-->
-            <a href="menwatch.html">1</a
-            ><!--Links men-section of watch-->
-            <a href="practice.html" class="active">2</a
-            ><!--This is active page-->
-            <a href="kidswatch.html">3</a
-            ><!--links kids-section-->
-            <a href="kidswatch.html">></a
-            ><!--links kids-section-->
+            <a href="menwatch.html"><</a>
+            <!--links Men-section of watch-->
+            <a href="menwatch.html">1</a>
+            <!--Links men-section of watch-->
+            <a href="practice.html" class="active">2</a>
+            <!--This is active page-->
+            <a href="kidswatch.html">3</a>
+            <!--links kids-section-->
+            <a href="kidswatch.html">></a>
+            <!--links kids-section-->
           </div>
         </div>
         <footer>
@@ -550,7 +537,7 @@
               <a href=""
                 ><i class="fa-solid fa-envelope"></i>
                 Timelytreasure69@gmail.com</a
-              ><!--email-->
+              ><!--E-mail-->
               <a href=""
                 ><i class="fa-solid fa-location-dot"></i> Itahari,Nepal</a
               ><!--Address-->
@@ -562,6 +549,7 @@
               <input type="email" placeholder="Your Email" class="newsEmail" />
               <br />
               <input type="submit" value="subscribe" class="subscribe" />
+              <!-- subscribe button -->
               <p class="copyright">&copy; Timelytreasute.All right reserved</p>
               <!--copyright section-->
             </div>
@@ -571,23 +559,6 @@
     </div>
     <script src="./main.js"></script>
     <!--Linking JavaScript-->
-    <script>
-      console.log("hello");
-      var popupmenu = document.querySelector(".addToCartPopup");
-      var close = document.querySelector(".popupActions button");
-
-      var popupBtn = document.querySelectorAll(".btn2 button");
-      popupBtn.forEach((btn) => {
-        btn.addEventListener("click", () => {
-          console.log("clicked");
-          popupmenu.style.display = "block";
-          popupmenu.style.opacity = "1";
-        });
-      });
-      close.addEventListener("click", () => {
-        popupmenu.style.display = "none";
-        popupmenu.style.opacity = "0";
-      });
-    </script>
+    
   </body>
 </html>
