this is Final Version i think

--- a/kidswatch.html
+++ b/kidswatch.html
@@ -34,7 +34,7 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Research</a></li>
                     <li class="dropnav"><a href="">Categories</a>
-                        <ul class="dropdown">
+                        <ul class="dropdown" style="min-width: 100px; z-index: 9">
                             <li><a href="menwatch.html" target="_main">Men</a></li> 
                             <li><a href="practice.html" target="_main">Women</a></li>
                             <li><a href="kidswatch.html" target="_main">Kids</a></li>
