--- a/menwatch.html
+++ b/menwatch.html
@@ -44,7 +44,7 @@
                     <!--links research page-->
                     <li class="dropnav"><a href="">Categories</a>
                         <!--categories of  watch-->
-                        <ul class="dropdown">
+                        <ul class="dropdown"style="min-width: 100px; z-index: 9;" >
                             <li><a href="menwatch.html" target="_main">Men</a></li>
                             <!--links men watch section-->
                             <li><a href="practice.html" target="_main">Women</a></li>
